# furdb-server

./: Cargo.toml  Dockerfile  README.md  compose.yaml
src/: config.rs  main.rs
src/database/: mod.rs
src/database/operations/get_info/: response.rs  utils.rs
src/table/operations/get_data/: mod.rs  request.rs  utils.rs
src/table/operations/get_info/: mod.rs  request.rs  response.rs  utils.rs
